# MAYBETHISISTHEONE

./: ATcT_lib.txt  README.md  cli.py  comp.py  compute_folder.py  compute_folder_OLD.py  compute_multiple.py  compute_single.py  core.py  fill.py  grab_unique.py  hfr_driver.py  multi_example.txt  multi_spec.py  multi_spec_prep.py  pyproject.toml  read_optsum.py  run_multiple.py  run_single.py  run_spec.py  run_unique.py  runner.py  spec_compute.py  unique_spec.py  utils.py  write_data.py
